Fixed the scrollbar appearance behavior to prevent compacting or jumping of the content.
Also change the color of the range input slider to be consistent with the onto theme

--- a/src/css/ttyg/agent-list.css
+++ b/src/css/ttyg/agent-list.css
@@ -10,6 +10,7 @@
     height: 75vh;
     max-height: 75vh;
     overflow-y: hidden;
+    scrollbar-gutter: stable;
 }
 
 .agent-list-component:hover .agent-list {
